--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -140,6 +140,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="Monsters\Monster.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Monsters\Monster.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
