--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -139,15 +139,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Tower\Floor\Floor.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="Intro.cpp" />
     <ClCompile Include="Monsters\Monster.cpp" />
     <ClCompile Include="Player\Hero.cpp" />
+    <ClCompile Include="Tower\Tower.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Tower\Floor\Floor.h" />
     <ClInclude Include="Intro.h" />
     <ClInclude Include="Monsters\Monster.h" />
     <ClInclude Include="Player\Hero.h" />
+    <ClInclude Include="Tower\Tower.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
