Working fight on floor 1
Made by Kasper and fitted to run with Martins version from yesterday

--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -139,8 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GameFloor\GameFloor.cpp" />
-    
+    <ClCompile Include="Tower\Floor\Floor.cpp" />
     <ClCompile Include="game.cpp" />
     <ClCompile Include="Intro.cpp" />
     <ClCompile Include="Monsters\Monster.cpp" />
@@ -148,8 +147,7 @@
     <ClCompile Include="Tower\Tower.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GameFloor\GameFloor.h" />
-    
+    <ClInclude Include="Tower\Floor\Floor.h" />
     <ClInclude Include="Intro.h" />
     <ClInclude Include="Monsters\Monster.h" />
     <ClInclude Include="Player\Hero.h" />
