added missing closing bracket

--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -146,6 +146,8 @@
     <ClCompile Include="Intro.cpp" />
     <ClCompile Include="Monsters\Monster.cpp" />
     <ClCompile Include="Player\Hero.cpp" />
+    <ClCompile Include="Tower\Floor\Floor.cpp" />
+    <ClCompile Include="Tower\Tower.cpp" />
     <!--<ClCompile Include="Tower\Tower.cpp" />-->
   </ItemGroup>
   <ItemGroup>
@@ -155,6 +157,8 @@
     <ClInclude Include="Intro.h" />
     <ClInclude Include="Monsters\Monster.h" />
     <ClInclude Include="Player\Hero.h" />
+    <ClInclude Include="Tower\Floor\Floor.h" />
+    <ClInclude Include="Tower\Tower.h" />
     <!--<ClInclude Include="Tower\Tower.h" />-->
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
