--- a/game/game.vcxproj.filters
+++ b/game/game.vcxproj.filters
@@ -5,14 +5,18 @@
     <ClCompile Include="Monsters\Monster.cpp" />
     <ClCompile Include="Player\Hero.cpp" />
     <ClCompile Include="Intro.cpp" />
-    <ClCompile Include="Tower\Tower.cpp" />
+    <ClCompile Include="Inventory\Inventory.cpp" />
+    <ClCompile Include="Inventory\Item.cpp" />
     <ClCompile Include="Tower\Floor\Floor.cpp" />
+    <ClCompile Include="Tower\Tower.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Monsters\Monster.h" />
     <ClInclude Include="Player\Hero.h" />
     <ClInclude Include="Intro.h" />
-    <ClInclude Include="Tower\Tower.h" />
+    <ClInclude Include="Inventory\Inventory.h" />
+    <ClInclude Include="Inventory\Item.h" />
     <ClInclude Include="Tower\Floor\Floor.h" />
+    <ClInclude Include="Tower\Tower.h" />
   </ItemGroup>
 </Project>
