--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -120,6 +120,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>irrKlang.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -139,6 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Armor.cpp" />
     <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="Item.cpp" />
     <!--<ClCompile Include="Tower\Floor\Floor.cpp" />-->
@@ -148,9 +150,11 @@
     <ClCompile Include="Player\Hero.cpp" />
     <ClCompile Include="Tower\Floor\Floor.cpp" />
     <ClCompile Include="Tower\Tower.cpp" />
+    <ClCompile Include="Weapon.cpp" />
     <!--<ClCompile Include="Tower\Tower.cpp" />-->
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Armor.h" />
     <ClInclude Include="Inventory.h" />
     <ClInclude Include="Item.h" />
     <!--<ClInclude Include="Tower\Floor\Floor.h" />-->
@@ -159,6 +163,7 @@
     <ClInclude Include="Player\Hero.h" />
     <ClInclude Include="Tower\Floor\Floor.h" />
     <ClInclude Include="Tower\Tower.h" />
+    <ClInclude Include="Weapon.h" />
     <!--<ClInclude Include="Tower\Tower.h" />-->
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
