Trying to fix include

--- a/game/game.vcxproj
+++ b/game/game.vcxproj
@@ -160,6 +160,27 @@
   </ItemGroup>
   <ItemGroup>
     <!--<ClInclude Include="Tower\Floor\Floor.h" />-->
+    <ClInclude Include="include\ik_ESoundEngineOptions.h" />
+    <ClInclude Include="include\ik_ESoundOutputDrivers.h" />
+    <ClInclude Include="include\ik_EStreamModes.h" />
+    <ClInclude Include="include\ik_IAudioRecorder.h" />
+    <ClInclude Include="include\ik_IAudioStream.h" />
+    <ClInclude Include="include\ik_IAudioStreamLoader.h" />
+    <ClInclude Include="include\ik_IFileFactory.h" />
+    <ClInclude Include="include\ik_IFileReader.h" />
+    <ClInclude Include="include\ik_IRefCounted.h" />
+    <ClInclude Include="include\ik_irrKlangTypes.h" />
+    <ClInclude Include="include\ik_ISound.h" />
+    <ClInclude Include="include\ik_ISoundDeviceList.h" />
+    <ClInclude Include="include\ik_ISoundEffectControl.h" />
+    <ClInclude Include="include\ik_ISoundEngine.h" />
+    <ClInclude Include="include\ik_ISoundMixedOutputReceiver.h" />
+    <ClInclude Include="include\ik_ISoundSource.h" />
+    <ClInclude Include="include\ik_ISoundStopEventReceiver.h" />
+    <ClInclude Include="include\ik_IVirtualRefCounted.h" />
+    <ClInclude Include="include\ik_SAudioStreamFormat.h" />
+    <ClInclude Include="include\ik_vec3d.h" />
+    <ClInclude Include="include\irrKlang.h" />
     <ClInclude Include="Inventory\Inventory.h" />
     <ClInclude Include="Inventory\Type\Armor.h" />
     <ClInclude Include="Intro.h" />
@@ -170,6 +191,12 @@
     <ClInclude Include="Tower\Tower.h" />
     <ClInclude Include="Inventory\Type\Weapon.h" />
     <!--<ClInclude Include="Tower\Tower.h" />-->
+  </ItemGroup>
+  <ItemGroup>
+    <Library Include="lib\irrKlang.lib" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="audio\bell.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
