Added SoundEngine and changed intro to game

--- a/game/game.vcxproj.filters
+++ b/game/game.vcxproj.filters
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="game.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="Monsters\Monster.cpp" />
     <ClCompile Include="Player\Hero.cpp" />
-    <ClCompile Include="Intro.cpp" />
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="Tower\Floor\Floor.cpp" />
     <ClCompile Include="Tower\Tower.cpp" />
     <ClCompile Include="Inventory\Item.cpp" />
@@ -15,43 +15,13 @@
   <ItemGroup>
     <ClInclude Include="Monsters\Monster.h" />
     <ClInclude Include="Player\Hero.h" />
-    <ClInclude Include="Intro.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="Tower\Floor\Floor.h" />
     <ClInclude Include="Tower\Tower.h" />
     <ClInclude Include="Inventory\Item.h" />
     <ClInclude Include="Inventory\Type\Weapon.h" />
     <ClInclude Include="Inventory\Type\Armor.h" />
     <ClInclude Include="Inventory\Inventory.h" />
-    <ClInclude Include="include\ik_ESoundEngineOptions.h" />
-    <ClInclude Include="include\ik_ESoundOutputDrivers.h" />
-    <ClInclude Include="include\ik_EStreamModes.h" />
-    <ClInclude Include="include\ik_IAudioRecorder.h" />
-    <ClInclude Include="include\ik_IAudioStream.h" />
-    <ClInclude Include="include\ik_IAudioStreamLoader.h" />
-    <ClInclude Include="include\ik_IFileFactory.h" />
-    <ClInclude Include="include\ik_IFileReader.h" />
-    <ClInclude Include="include\ik_IRefCounted.h" />
-    <ClInclude Include="include\ik_irrKlangTypes.h" />
-    <ClInclude Include="include\ik_ISound.h" />
-    <ClInclude Include="include\ik_ISoundDeviceList.h" />
-    <ClInclude Include="include\ik_ISoundEffectControl.h" />
-    <ClInclude Include="include\ik_ISoundEngine.h" />
-    <ClInclude Include="include\ik_ISoundMixedOutputReceiver.h" />
-    <ClInclude Include="include\ik_ISoundSource.h" />
-    <ClInclude Include="include\ik_ISoundStopEventReceiver.h" />
-    <ClInclude Include="include\ik_IVirtualRefCounted.h" />
-    <ClInclude Include="include\ik_SAudioStreamFormat.h" />
-    <ClInclude Include="include\ik_vec3d.h" />
-    <ClInclude Include="include\irrKlang.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="lib\ikpFlac.dll" />
-    <None Include="lib\ikpMP3.dll" />
-    <None Include="lib\irrKlang.dll" />
-    <None Include="lib\irrKlang.exp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="lib\irrKlang.lib" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="audio\bell.wav" />
